Loading animator is overlapping with the given text #1910 - UI issues fixed

--- a/participant-manager/src/app/app.component.scss
+++ b/participant-manager/src/app/app.component.scss
@@ -5,3 +5,14 @@
   font-weight: 500;
   text-align: center;
 }
+
+@media only screen and (max-width: 580px) and (min-width: 320px) {
+  .child_text {
+    color: var(--space-gray);
+    font-size: 100%;
+    font-family: Muli, sans-serif;
+    font-weight: 500;
+    text-align: center;
+    margin-top: 50%;
+  }
+}
